--- a/.gitignore
+++ b/.gitignore
@@ -611,3 +611,5 @@ $RECYCLE.BIN/
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudio,csharp,dotnetcore,windows
+
+.vagrant/
