--- a/Lab3Library/Lab3Library.csproj
+++ b/Lab3Library/Lab3Library.csproj
@@ -1,14 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <PackageId>VKomissarovLab3</PackageId>
+    <Title>VKomissarovLab3</Title>
+    <Authors>Komissarov</Authors>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="VKomissarovLab3" Version="1.0.0" />
-  </ItemGroup>
 
 </Project>
