--- a/Lab6/appsettings.json
+++ b/Lab6/appsettings.json
@@ -16,5 +16,6 @@
   "Auth0": {
     "Domain": "dev-87i6ou6t4qly0k6p.us.auth0.com",
     "ClientId": "EsDrcYapi0zOsFlCyqag2NLX9XtBamsY"
-  }
+  },
+  "UsingDatabaseProvider": "SqlLite"
 }
