--- a/Lab6/appsettings.json
+++ b/Lab6/appsettings.json
@@ -17,5 +17,5 @@
     "Domain": "dev-87i6ou6t4qly0k6p.us.auth0.com",
     "ClientId": "EsDrcYapi0zOsFlCyqag2NLX9XtBamsY"
   },
-  "UsingDatabaseProvider": "SqlLite"
+  "UsingDatabaseProvider": "InMemory"
 }
